<resources>
    <string name="app_name">InformaGuate2</string>
    <string name="nombre">Nombre</string>
    <string name="tikal">Tikal</string>
    <string name="retahuleu">Retahuleu</string>
    <string name="antigua">Antigua</string>
    <string name="todo">TODO</string>
    <string name="antigua_guatemala">Antigua Guatemala</string>
    <string name="article_tikal">Tikal Tikal es el sitio excavado más grande de las Américas y contiene algunos de los restos arqueológicos más fascinantes de la antigua civilización Maya. Es la reserva natural y cultural más célebre de Guatemala y fue declarado parque nacional en 1955 y sitio de Patrimonio Mundial por la Unesco en 1979.\n

Tikal comprende 576 km2 de selva exuberante rodeando el centro ceremonial. Tomó a la Universidad de Pensilvania 13 años develar alrededor de 16 km2 cuadrados de estructuras en Tikal. No obstante, muchas quedan aún por descubrirse. Entonces, tome un consejo... ¡No trate de conocer todo Tikal en un día, aunque usted esté en excelente forma!\n
Tikal posee una cierta magia... Como todos los acertijos sin respuestas fascina a cualquiera y nosotros nos atrevemos a decir... Tikal es tan irresistible que una vez usted esté allí, ¡se encontrará a sí mismo queriendo quedarse un momento más!\n
        Tikal permaneció como un misterio durante siglos, tras haber sido abandonado abruptamente por los Mayas hace más de 1000 años y recubierto por una selva implacable.  Sólo una leyenda sobrevivía entre los indígenas sobre una ciudad perdida, en donde sus ancestros habían alcanzado un alto desarrollo cultural.  En 1848 la leyenda se desvaneció, dando paso a una era de excitantes descubrimientos.\n
  Se trató de un descubrimiento casual hecho por Ambrosio Tut, un “chiclero”.   Él vió las cresterías de los templos en la distancia.  Corrió a contarle a Modesto Méndez, el entonces Gobernador de la Provincia de Petén.  Cuando llegaron al sitio los impresionantes templos, plazas abiertas y construcciones de varios niveles, en donde vivieron sacerdotes y reyes alguna vez, se encontraban frente al Gobernador Méndez y a Ambrosio Tut, quienes visitaron el sitio con un artista que grabó algunas de las esculturas de Tikal.  Su descubrimiento fue publicado por la Academia de Ciencias de Berlín en 1853.  Era sólo cuestión de unos años antes que los curiosos investigadores empezaran a viajar desde todos los confines del mundo para ver por sí mismos lo que ellos habían descubierto.</string>
    <string name="comentar">Comentar</string>
    <string name="tikal_ruinas">Tikal Ruinas</string>
    <string name="reu">Reu</string>
    <string name="article_antigua">La belleza de esta ciudad, Patrimonio Cultural de la Humanidad por la UNESCO,  radica en cada uno de sus detalles. Los que la visitan quedan maravillados con sus atractivos históricos. Antiguos templos y monasterios forman parte de su riqueza.\n
        Fundada el 10 de marzo de 1543, La Antigua Guatemala fue declarada Patrimonio Cultural de la Humanidad por la Unesco en el año 1979. Esta bella y mágica ciudad colonial guarda casi quinientos años de historia, con un clima privilegiado y una excepcional vista hacia los volcanes de Fuego y Acatenango. \n
        Fue construida en el Valle de Panchoy y nombrada la tercera sede de la capital de Guatemala. En esta ciudad el tiempo se detuvo y quedó atrapado en las gruesas paredes de sus templos, sus monasterios y sus casas coloniales. Esta colorida población aún conserva edificaciones restauradas del siglo XVI y puede ser recorrida a pie a través de sus calles empedradas. \n
        Desde el Cerro de la Cruz, ubicado al nororiente de la urbe, La Antigua Guatemala se ve impresionante. Admirable es también el emblemático Volcán de Agua, que ha sido testigo de las glorias y caídas de la población. La belleza de esta ciudad radica en cada uno de sus detalles. Los que la visitan quedan maravillados con sus atractivos históricos, antiguos templos y monasterios que forman parte de su legado.</string>
    <string name="article_reu">Retalhuleu es un departamento de la República de Guatemala, situado en la región suroccidental del país. Tiene una extensión territorial de 1856 kilómetros cuadrados y su población es de aproximadamente 273 328 personas, según el último censo nacional de 2006. Cuenta con nueve municipios y su cabecera departamental es el municipio de Retalhuleu (Diccionario Municipal de Guatemala, 2001).\n
Retalhuleu limita al norte con Quetzaltenango, al este con Suchitepéquez, al sur con el Océano Pacífico y al oeste con San Marcos y Quetzaltenango. Sus principales idiomas son el castellano, k’iche’ y cakchiquel. Su temperatura habitual es cálida y su fiesta principal es el 8 de diciembre, en honor a la Virgen de la Inmaculada Concepción. Su fundación fue el 16 de octubre de 1877 (Diccionario Municipal de Guatemala, 2001).\n
    Retalhuleu tiene una población de 273 328 personas, de los cuales un 50.4 por ciento vive bajo la línea de pobreza -137 771 personas- y un 9.5 por ciento está considerado dentro de la categoría de pobreza extrema -25 969 personas- (Instituto Nacional de Estadística, 2006).</string>
</resources>
