<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/atitlan" />

    <EditText
        android:id="@+id/editText_pedir_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/nombre"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_nombre" />

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="71dp"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:text="@string/nombre"
        app:layout_constraintEnd_toStartOf="@+id/editText_pedir_nombre"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button_tikal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tikal"
        android:onClick="Tikal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_reu"
        app:layout_constraintEnd_toStartOf="@+id/button_reu"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_reu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/retahuleu"
        android:onClick="Reu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_antigua"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_tikal"
        app:layout_constraintTop_toBottomOf="@+id/textView_nombre"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_antigua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/antigua"
        android:onClick="AntiguaInfo"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_reu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_reu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:onClick="nombre"
        app:layout_constraintBottom_toTopOf="@+id/editText_pedir_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/textView_mostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_reu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_pedir_nombre" />

</androidx.constraintlayout.widget.ConstraintLayout>